# autoglm-asr-mcp

./: .gitignore  AI_SETUP_GUIDE.md  README.md  RELEASE_NOTES_0.2.2.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/autoglm_asr_mcp/: __init__.py  audio_utils.py  config.py  server.py  transcriber.py  vad.py
test/: config.test.js  errors.test.js  transcriber-chunk.test.js
ts-src/: audio.ts  config.ts  errors.ts  index.ts  transcriber.ts
